[B]2.1.4[/B]
- fixed: fixed artists due to IMDb changes

[B]2.1.3[/B]
- fixed: fix previous commit

[B]2.1.2[/B]
- fixed: title scraping due to site changes

[B]2.1.1[/B]
- changed: re-added fixchars

[B]2.1.0[/B]
- changed: scrape only 1 studio

[B]2.0.11[/B]
- changed: move scraping of IMDb rating out to IMDb scraper library

[B]2.0.10[/B]
- fixed: year won't get scraped if title contains brackets

[B]2.0.9[/B]
- added: Polish language

[B]2.0.8[/B]
- reverted: purge fixchars from all functions, since it cause convert fails on Beta2 and Linux

[B]2.0.7[/B]
- fixed: title won't find if year includes the string /I in the search results

[B]2.0.6[/B]
- fixed: year won't get scraped if a string attached to the year (e.g. "TV 2008")

[B]2.0.5[/B]
- fixed: title won't find if a string is attached to the year (e.g. "TV 2008")

[B]2.0.4[/B]
- reverted: fixchars removed from cast parsing, leads to Dharma Beta2 hanging, will be added back once next Beta is out

[B]2.0.3[/B]
- fixed: some more cast won't get scraped under certain circumtances, added back trailers from IMDb as fallback

[B]2.0.2[/B]
fixed: cast won't get scraped under certain circumtances, remove broken code to scrape trailers from IMDb

[B]2.0.1[/B]
- fixed: trailer scraping from HD-Trailers.net

[B]2.0.0[/B]
- changed: adapted new IMDb layout

[B]1.0.15[/B]
- fixed: added additional check to avoid Canada (French Title) being scraped if USA / International selected

[B]1.0.14[/B]
- fixed: tack /combined onto the end of the url to work around the new layout of IMDb

[B]1.0.13[/B]
- fixed: another step to ensure English title gets scraped when selected

[B]1.0.12[/B]
- fixed: various fixes to title scraping on a preferred language

[B]1.0.11[/B]
- changed: strip surrounding quotes from titles

[B]1.0.10[/B]
- fixed: scraping directors from imdb when fullcast enabled

[B]1.0.9[/B]
- changed: new scraper icon

[B]1.0.8[/B]
- changed: translation cosmetics

[B]1.0.7[/B]