@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.common.hdtrailers.net"
        name="HD-Trailers common scraper functions"
-       version="1.0.4"
+       version="1.0.5"
        provider-name="Bence Nádas (olympia)">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
