@@ -1,24 +1,24 @@
 ﻿<scraperfunctions>
 	<GetHDTrailersnet480p dest="3">
-		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse480pTrailer&quot;&gt;http://www.hd-trailers.net/blog/?s=&quot;\1%20%28Theatrical%20Trailer%29%22&lt;/url&gt;&lt;/details&gt;" dest="3">
-			<RegExp input="$$1" output="\1" dest="6">
-				<expression noclean="1" fixchars="1" trim="1" encode="1">(.*)</expression>
+		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse480pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1&lt;/url&gt;&lt;/details&gt;" dest="3">
+			<RegExp input="$$1" output="\1-" dest="6">
+				<expression repeat="yes" trim="1">([\w]+)</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
 	</GetHDTrailersnet480p>
 	<GetHDTrailersnet720p dest="3">
-		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse720pTrailer&quot;&gt;http://www.hd-trailers.net/blog/?s=&quot;\1%20%28Theatrical%20Trailer%29%22&lt;/url&gt;&lt;/details&gt;" dest="3">
+		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse720pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1&lt;/url&gt;&lt;/details&gt;" dest="3">
 			<RegExp input="$$1" output="\1" dest="6">
-				<expression noclean="1" fixchars="1" trim="1" encode="1">(.*)</expression>
+				<expression trim="1" noclean="1" encode="1">([\w]+)</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
 	</GetHDTrailersnet720p>
 	<GetHDTrailersnet1080p dest="3">
-		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse1080pTrailer&quot;&gt;http://www.hd-trailers.net/blog/?s=&quot;\1%20%28Theatrical%20Trailer%29%22&lt;/url&gt;&lt;/details&gt;" dest="3">
+		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse1080pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1&lt;/url&gt;&lt;/details&gt;" dest="3">
 			<RegExp input="$$1" output="\1" dest="6">
-				<expression noclean="1" fixchars="1" trim="1" encode="1">(.*)</expression>
+				<expression trim="1" noclean="1" encode="1">([\w]+)</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
@@ -26,18 +26,18 @@
 	<Parse480pTrailer dest="5">
 		<!--Fetch 480p trailer link from hdtrailers.net-->
 		<RegExp input="$$1" output="&lt;details&gt;&lt;trailer&gt;http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
-			<expression noclean="1">sid=(\d*)"&gt;480p&lt;/a&gt;</expression>
+			<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res480p</expression>
 		</RegExp>
 	</Parse480pTrailer>
 	<Parse720pTrailer dest="5">
 		<RegExp input="$$6" output="&lt;details&gt;&lt;trailer&gt;\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
 			<!--Fallback to fetch 480p trailer link if 720p is not available-->
 			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
-				<expression noclean="1">sid=(\d*)"&gt;480p&lt;/a&gt;</expression>
+			<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res480p</expression>
 			</RegExp>
 			<!--Fetch 720p trailer link from hdtrailers.net-->
 			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
-				<expression noclean="1">sid=(\d*)"&gt;720p&lt;/a&gt;</expression>
+			<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res720p</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
@@ -46,15 +46,15 @@
 		<RegExp input="$$6" output="&lt;details&gt;&lt;trailer&gt;\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
 			<!--Fallback to fetch 480p trailer link if 720p and 1080p are not available-->
 			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
-				<expression noclean="1">sid=(\d*)"&gt;480p&lt;/a&gt;</expression>
+			<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res480p</expression>
 			</RegExp>
 			<!--Fallback to fetch 720p trailer link if 1080p is not available-->
 			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
-				<expression noclean="1">sid=(\d*)"&gt;720p&lt;/a&gt;</expression>
+			<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res720p</expression>
 			</RegExp>
 			<!--Fetch 1080p trailer link from hdtrailers.net-->
 			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
-				<expression noclean="1">sid=(\d*)"&gt;1080p&lt;/a&gt;</expression>
+			<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res1080p</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
