@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.imdb.com"
        name="IMDb"
-        version="2.1.4"
+        version="2.1.5"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -9,7 +9,7 @@
     <import addon="metadata.common.movieposterdb.com" version="1.0.4"/>
     <import addon="metadata.common.imdb.com" version="2.0.7"/>
     <import addon="metadata.common.impa.com" version="1.0.3"/>
-    <import addon="metadata.common.hdtrailers.net" version="1.0.4"/>
+    <import addon="metadata.common.hdtrailers.net" version="1.0.5"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="en"
