@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.themoviedb.org"
        name="The MovieDB"
-       version="1.2.0"
+       version="1.2.1"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
     <import addon="metadata.common.themoviedb.org" version="1.0.7"/>
-    <import addon="metadata.common.hdtrailers.net" version="1.0.4"/>
+    <import addon="metadata.common.hdtrailers.net" version="1.0.5"/>
     <import addon="metadata.common.imdb.com" version="2.0.5"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
