@@ -1,3 +1,6 @@
+[B]1.2.1[/B]
+- fixed: trailer scraping from hd-trailers.net
+
 [B]1.2.0[/B]
 - Added option to scrape rating from IMDb
 
