@@ -1,3 +1,6 @@
+[B]2.1.5[/B]
+- fixed: trailer scraping from hd-trailers.net
+
 [B]2.1.4[/B]
 - fixed: fixed artists due to IMDb changes
 
